# RecordFlow

./: README.md  index.html  package-lock.json  package.json
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
