[package]
name = "macro_recroder"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-show", "fs-write-file", "fs-read-file", "dialog-open", "dialog-save", "dialog-message", "window-minimize", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.1.3"
rdev = {version = "0.5.3", features= ["serde"] }
once_cell = "1.19.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
